welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:-7: error: not found: value averageValue
 val res = averageValue( t.getParameter(0).asInstanceOf[Array[Int]]);
           ^averageValue:2: error: not found: value getMondeHauteur
  var len:Int=getMondeHauteur()
              ^averageValue:5: error: not found: value getCouleurSol
    T(i)=getCouleurSol()
         ^averageValue:6: error: not found: value avance
    avance;
    ^averageValue:8: error: not found: value getMondeLargeur
  var largeur:Int=getMondeLargeur()
                  ^averageValue:10: error: not found: value avance
    avance;gauche;avance;droite;
    ^averageValue:10: error: not found: value gauche
    avance;gauche;avance;droite;
           ^averageValue:10: error: not found: value avance
    avance;gauche;avance;droite;
                  ^averageValue:10: error: not found: value droite
    avance;gauche;avance;droite;
                         ^averageValue:12: error: not found: value setCouleurBrosse
      setCouleurBrosse(T(j));
      ^averageValue:13: error: not found: value baisseBrosse
      baisseBrosse;leveBrosse
      ^averageValue:13: error: not found: value leveBrosse
      baisseBrosse;leveBrosse
                   ^averageValue:14: error: not found: value avance
      avance
      ^